--- a/project/src/components/style.css
+++ b/project/src/components/style.css
@@ -21,7 +21,7 @@
 .cardTitle {
     /* width: 245px;
     height: 50px; */
-    width: auto;
+    /* width: auto; */
     flex-shrink: 0;
     color: #0F2844;
     font-family: Lexend;
@@ -138,4 +138,8 @@ box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px 0px rgba(0, 0, 0,
 border: 1px solid var(--daybreak-blue-blue-6, #1890FF);
 background: var(--gray-gray-1, #FFF);
 box-shadow: 0px 0px 4px 0px rgba(24, 144, 255, 0.50);
+}
+
+.backgroundYellow{
+    background-color: #FFC436;
 }
